dev/ingress/fake8-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake8-ingress
  namespace: fake8-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake8.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake8-service
                port:
                  number: 20008
